// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`appIconContentsTemplate without filename matches snapshot 1`] = `
"{
  "images": [
    {
      "idiom": "universal",
      "platform": "ios",
      "size": "1024x1024"
    }
  ],
  "info": {
    "author": "xcode",
    "version": 1
  }
}"
`;

exports[`appIconContentsTemplate with filename matches snapshot 1`] = `
"{
  "images": [
    {
      "idiom": "universal",
      "platform": "ios",
      "size": "1024x1024",
      "filename": "AppIcon.png"
    }
  ],
  "info": {
    "author": "xcode",
    "version": 1
  }
}"
`;
